--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -19,7 +19,6 @@
     <title>{% block title %}Default{% endblock %} </title>
   </head>
   <body>
-    
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
         <span class="navbar-toggler-icon"></span>
@@ -35,10 +34,7 @@
       </div>
     </nav>
 
-    <div class="containter">
-      {% block content %}{% endblock content %}
-    </div>
-
+    <div class="container">{% block content %} {% endblock %}</div>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
@@ -54,6 +50,7 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
+
     <script
       type="text/javascript"
       src="{{ url_for('static', filename='index.js') }}"
