--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -11,10 +11,10 @@
   </div>
 
   <div class="form-group">
-    <label for="password1">Password</label>
-    <input type="password" class="form-control" id="password1" name="password1" placeholder="Enter password"/>
+    <label for="password">Password</label>
+    <input type="password" class="form-control" id="password" name="password" placeholder="Enter password"/>
   </div>
-
+  <br/>
   <button type="submit" class="btn btn-primary">Login</button>
 </form>
-{% endblock %}
+{% endblock content %}
