--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -29,6 +29,7 @@
           {% if user.is_authenticated %}
           <a class="nav-item nav-link" id="home" href="/">Home</a>
           <a class="nav-item nav-link" id="about" href="/about">About</a>
+          <a class="nav-item nav-link" id="search" href="/search">Search</a>
           <a class="nav-item nav-link" id="profile" href="/profile">Profile</a>
           <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
           {% else %}
