--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -3,4 +3,8 @@
 
 {% block content %}
 <h1>ABOUT PAGE</h1>
+<p>TALK ABOUT WHAT THE APPLICATION IS ALL ABOUT</p>
+<hr/>
+<h1>HOW TO NAVIGATE?</h1>
+<p>TALK ABOUT HOW TO NAVIGATE THROUGH THE APPLICATION</p>
 {% endblock content %}
