--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -17,6 +17,7 @@
     />
 
     <title>{% block title %}Default{% endblock %} </title>
+    {% block details %} {% endblock %}
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -62,7 +63,12 @@
       {% endif %}
     {% endwith %}
 
-    <div class="container">{% block content %} {% endblock %}</div>
+
+    <div class="container">
+      {% block content %} {% endblock %}
+    </div>
+
+    
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
