--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -64,6 +64,72 @@
     {% endwith %}
 
     <div class="container">{% block content %} {% endblock %}</div>
+    
+    <style media="screen">
+      body {
+          font: 1em/150% verdana, arial, helvetica, sans-serif;
+       }
+      
+      #footer {
+          position:absolute;
+          bottom: 0;
+          display: table;
+          width: 100%;
+          padding: 1.25em;
+          margin: 0 auto;
+          border: 0.062em solid #151515;
+          background-color: #343a40;
+          color:  #999d9f;
+       }
+      
+      #footer div {
+          display: table-cell;
+          width: 33.333%;
+          padding: 1em;
+          text-align: center;
+      }
+      
+      #footer div h2 {
+          text-align: center;
+       }
+      
+      #footer div:nth-of-type(2) {
+          border-right: 0.062em dotted #999;
+          border-left: 0.062em dotted #999;
+       }
+      
+      #footer div:nth-of-type(3) {
+          text-align: center;
+       }
+      </style>
+    
+    <footer>
+        <div id="footer">
+          <div>
+            <h2>Explore</h2>
+          Home <br>
+          About<br>
+          Search<br>
+          </div><div>
+            <h2>Social Media:</h2>
+            <img class="fb" src="https://www.facebook.com/images/fb_icon_325x325.png" width="30" height="30" >
+            <img class="insta" src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c521.png" width="30" height="30">
+            <img class="twitter" src="https://www.freepnglogos.com/uploads/twitter-logo-png/twitter-logo-vector-png-clipart-1.png" width="30" height="30">
+            <img class="youtube" src="https://www.freeiconspng.com/thumbs/youtube-logo-png/hd-youtube-logo-png-transparent-background-20.png" width="30" height="40"> <br><br><br><br><br><br><br><br>
+            <p>© Copyright MUSF. All rights reserved.</p>
+            
+          </div><div>
+            <h2>Contact Us</h2>
+            <p>Questions? Go ahead.</p>
+            <p>Mark Natavio<br>mnatavi000@citymail.cuny.edu<br>
+              Farnaz Zinnah<br>fzinnah000@citymail.cuny.edu<br>
+              Sadia Chowdhury<br>schowdh025@citymail.cuny.edu<br>
+              Uzmabanu Kapadia<br>ukapadi000@citymail.cuny.edu
+            </p>
+          </div>
+         </div>
+      </footer>
+    
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
