--- a/website/templates/search.html
+++ b/website/templates/search.html
@@ -6,23 +6,15 @@
 {% endblock %}
 
 {% block content %}
+  <fieldset>
+    <legend>WHAT ARE YOU LOOKING FOR?</legend>
+    <form class="form-inline my-2 my-lg-0" method="get">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" name="searchTextField">
+      <button class="btn btn-outline btn-info">Search</button>
+    </form>
+  </fieldset>
+
   <form method="post">
-    <!--
-    <fieldset>
-      <legend>WHAT ARE YOU LOOKING FOR?</legend>
-      <div class="inner-form">
-        <div class="input-field">          
-          <input type="text" class="form-control" id="choices-text-preset-values" name="keyword_search" type="text" placeholder="Type to search..." />
-          <input type="button" class="btn-search" type="button">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-              <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
-            </svg>
-          </input>
-          
-        </div>
-      </div>
-    </fieldset>
-    -->
     <div class="container testimonial-group">
       <div class="row text-center">
         <div class="btn-group pre-scrollable" role"group" id="genres">
@@ -33,11 +25,13 @@
       </div>
     </div>
   </form>
-  <hr/>
   
+  <hr/>
+
   <table>
     {% for item in songs %}
-    <tr >
+    <tr>
+      <th> ID: </th> <td> {{item.song_id}} </td>
       <th> Song: </th> <td> {{item.song}} </td>
       <th> Artist: </th> <td> {{item.artist}} </td>
       <th> Genre: </th> <td> {{item.genre}} </td>
