--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -76,6 +76,8 @@
     {% endwith %}
 
     <div class="container">{% block content %} {% endblock %}</div>
+
+    <div class="home">{% block homepage %} {% endblock %}</div>
     
     <style>
  
