--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,6 +1,107 @@
 {% extends 'base.html' %}
 {% block title %}Home{% endblock %}
 
-{% block content %}
-<h1>HOME PAGE</h1>
-{% endblock content %}
+{% block homepage %}
+
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+  <title>Moderna Bootstrap Template - Index</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
+
+
+  <!-- Google Fonts -->
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,700,700i&display=swap"
+    rel="stylesheet">
+
+  <!-- Vendor CSS Files -->
+  <link href="../assets/vendor/animate.css/animate.min.css" rel="stylesheet">
+  <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
+  <!-- Template Main CSS File -->
+  <link href="../static/css/home.css" rel="stylesheet">
+
+</head>
+
+<body>
+
+  <!-- ======= Hero Section ======= -->
+  <section id="hero" class="d-flex justify-cntent-center align-items-center">
+    <div id="heroCarousel" class="home carousel carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
+
+      <!-- Slide 1 -->
+      <div class="carousel-item active">
+        <div class="carousel-home">
+          <h2 class="animate__animated animate__fadeInDown">Welcome to <span>the world of music</span></h2>
+          <p class="animate__animated animate__fadeInUp">Hello! Our team introduces you to the MUSF app. Here, we offer the best music to the listeners worldwide. Choose your best music choice from our library of top chart songs and the top artists. You can stream the music you want and you can listen to those anytime and anywhere you want. So, let's sit back and enjoy music here alone or with your loved ones. </p>
+          
+        </div>
+      </div>
+
+  </section><!-- End Hero -->
+
+  <main id="main">
+
+    <!-- ======= Services Section ======= -->
+    <section class="services">
+ 
+
+        <div class="row">
+          <div class="col-md-6 col-lg-3 d-flex " data-aos="fade-up">
+            <div class="icon-box icon-box-pink">
+              <div class="icon"><i class="bx bxl-dribbble"></i></div>
+              <h4 class="title"><a href="">Create your best playlist</a></h4>
+              <p class="description">Take your own playlist and share it with your loved ones.</p>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+            <div class="icon-box icon-box-cyan">
+              <div class="icon"><i class="bx bx-file"></i></div>
+              <h4 class="title"><a href="">Keep track of your favorites</a></h4>
+              <p class="description">Loved a song? Loved an artist? You can get artist and album information. Go ahead and keep those songs and artists in your favorites list. You can listen to your favorite artists song anytime you want.</p>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+            <div class="icon-box icon-box-blue">
+              <div class="icon"><i class="bx bx-world"></i></div>
+              <h4 class="title"><a href="">Search for any genre</a></h4>
+              <p class="description">Look for any music genre and discover new music.</p>
+            </div>
+          </div>
+
+        </div>
+
+    </section><!-- End Services Section -->
+
+    <!-- ======= Why Us Section ======= -->
+
+    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+        class="bi bi-arrow-up-short"></i></a>
+
+    <!-- Vendor JS Files -->
+
+    <!-- <script src="../static/assets/vendor/aos/aos.js"></script>
+    <script src="../static/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../static/assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="../static/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="../static/assets/vendor/swiper/swiper-bundle.min.js"></script> -->
+
+    <!-- Template Main JS File -->
+    <script src="../static/assets/js/main.js"></script>
+
+</body>
+
+</html>
+{% endblock %}
