--- a/website/templates/search.html
+++ b/website/templates/search.html
@@ -31,12 +31,12 @@
     </form>
   </fieldset>
 
-  <form method="post">
+  <form method="get">
     <div class="container testimonial-group">
       <div class="row text-center">
         <div class="btn-group pre-scrollable" role"group" id="genres">
           {% for genre in genres %}        
-            <button class="btn btn-secondary" name="genre_button" value={{ genre.genre_id }} onclick="return value"> {{ genre.genre }} </button>  
+            <button class="btn btn-secondary" name="genre_id" value={{ genre.genre_id }} onclick="return value"> {{ genre.genre }} </button>  
           {% endfor %}
         </div>
       </div>
@@ -45,23 +45,23 @@
   
   <hr/>
 
-  <form method="post">
-    <table id="data" class="table table-striped">  
+  <table id="data" class="table table-striped">  
+    <tr>
+      <th> Song </th>
+      <th> Artist </th> 
+      <th> Genre </th> 
+      <th> Duration </th> 
+    </tr>
+    {% for song in songs %}
       <tr>
-        <th> Song </th>
-        <th> Artist </th> 
-        <th> Genre </th> 
-        <th> Duration </th> 
-      </tr>
-      {% for song in songs %}
-        <tr>
-          <td> {{ song.song }} </td>
-          <td> {{ artists[song.artist-1].artist }} </td>
-          <td> {{ genres[song.genre-1].genre }} </td>
-          <td> {{ song.duration }} </td>
+        <td> {{ song.song }} </td>
+        <td> {{ artists[song.artist-1].artist }} </td>
+        <td> {{ genres[song.genre-1].genre }} </td>
+        <td> {{ song.duration }} </td>
+        <form method="post">
           <td> <button name="song_selected" value={{ song.song_id }} onclick="return value">Check Song</button> </td>
-        </tr>
-      {% endfor %}  
-    </table>
-  </form>
+        </form>
+      </tr>
+    {% endfor %}  
+  </table>
 {% endblock content %}
