--- a/website/templates/profile.html
+++ b/website/templates/profile.html
@@ -2,5 +2,23 @@
 {% block title %}Profile{% endblock %} 
 
 {% block content%}
-<h1>PROFILE PAGE, WELCOME {% print(user.username) %} </h1>
+
+<div class="content-section">
+  <div class="media">
+    <div class="media-body">
+      <h1> {{user.username}} </h1>
+    </div>
+  </div>
+  
+  {% if user.bio != None %}
+  <h1> {{ user.bio }} </h1>
+  {% endif %}
+
+  
+</div>
+<form method="post">
+<button name="user_id" value="{{user.user_id}}"> Edit Profile </button>
+</form>
+
+
 {% endblock %}
