Added Playlist functionality
Fixed Playlists_Songs table name to Content, added button to add song to Favorites Playlists (might add the ability to make more playlists in the future)

--- a/website/templates/info.html
+++ b/website/templates/info.html
@@ -8,7 +8,7 @@
 <p> {% print(song.duration) %}</p>
 <p> {% print(albums[song.album-1].album) %}</p>
 
-<form method="post">
+<form method="get">
   <button name="add_to_playlist" value={{ song.song_id }} onclick="return value"> add to playlist </button>
 </form>
 
