Edit Profile Bug Fixes
Fixed bugs in the edit profile page

--- a/website/templates/edit_profile.html
+++ b/website/templates/edit_profile.html
@@ -42,7 +42,7 @@
                 <td> {{ genres[song.genre-1].genre }} </td>
                 <td> {{ song.duration }} </td> 
                 <form method="get">
-                  <td> <button name="song_to_delete" value={{ playlist.playlist_id }}{{ song.song_id }} onclick="return value">Delete Song</button> </td>
+                  <td> <button name="song_to_delete" value={{ playlist.playlist_id }},{{ song.song_id }} onclick="return value">Delete Song</button> </td>
                 </form>
               </tr>
             {% endif %}
