--- a/website/templates/edit_profile.html
+++ b/website/templates/edit_profile.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} 
-{% block title %}Dashboard{% endblock %} 
+{% block title %}Edit Profile{% endblock %} 
 
 {% block content%}
   <h1>Edit Profile</h1>
