--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -2,9 +2,17 @@
 {% block title %}About{% endblock %}
 
 {% block content %}
+<html>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+  <link rel="stylesheet" href="../static/css/aboutpage.css" />
+</head>
+
 <h1>ABOUT PAGE</h1>
 <p>TALK ABOUT WHAT THE APPLICATION IS ALL ABOUT</p>
 <hr/>
 <h1>HOW TO NAVIGATE?</h1>
 <p>TALK ABOUT HOW TO NAVIGATE THROUGH THE APPLICATION</p>
-{% endblock content %}
+{% endblock %}
