--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -26,7 +26,7 @@
         flex-direction: column;
       }
       footer{
-        padding-top: 50px;
+        padding-top: 30px;
         margin-top: auto;
       }
     </style>
@@ -78,6 +78,18 @@
     <div class="container">{% block content %} {% endblock %}</div>
 
     <div class="home">{% block homepage %} {% endblock %}</div>
+
+    <div class="about">{% block aboutpage %} {% endblock %}</div>
+
+    <div class="profile">{% block profilepage %} {% endblock %}</div>
+
+    <div class="profile">{% block edit_profile %} {% endblock %}</div>
+
+    <div class="search">{% block searchpage %} {% endblock %}</div>
+
+    <div class="info">{% block infopage %} {% endblock %}</div>
+
+
     
     <style>
  
