little change in about page footer

--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -16,7 +16,7 @@
     <div class="about-section">
 
       <h1>About Us</h1><br>
-      <p>
+      <p class = "paras">
         MUSF is a music recommendation application that recommends new songs to users based on their music taste. The
         dataset of the songs has been divided into four tables: Song table,
         Album table, Genres table, and Artists table. These tables interact with
@@ -55,7 +55,7 @@
 
   <div class="navigation-section">
     <h1>Navigating Our App</h1><br>
-    <p>Go to the search page to find new music.
+    <p class = "paras">Go to the search page to find new music.
       Select a Genre or search a song by Keyword.
       Click on the song of your choosing and add it to a playlist.
       Loving the playlist?
