Minor changes/ final touches

--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -28,6 +28,8 @@
     </div>
   </div>
 
+  <hr style="color:white"/>
+
   <section class="services">
 
 
@@ -52,14 +54,15 @@
 
 
   </section>
-
+  <hr style="color:white"/>
   <div class="navigation-section">
-    <h1>Navigating Our App</h1><br>
-    <p class = "paras">Go to the search page to find new music.
-      Select a Genre or search a song by Keyword.
-      Click on the song of your choosing and add it to a playlist.
-      Loving the playlist?
-      You can make more on your profile page.</p>
+    <h1>How to Navigating Through Our App</h1><br>
+    <p class = "paras">Make an account.</p>
+    <p class = "paras">Go to the search page to find new music.</p>
+    <p class = "paras">Select a Genre or search a song name by keyword.</p>
+    <p class = "paras">Click on the song of your choosing to see details on the song. Click the "Add to playlist" button to add it to your favorites playlist.</p>
+    <p class = "paras">Want to make changes?</p>
+    <p class = "paras">Go to your profile and then click on the 'Edit Profile' button. There you can change your username, email, bio, and delete songs from your existing playlists.</p>
   </div>
 
   </section>
