Minor Changes on About

--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -56,7 +56,7 @@
   </section>
   <hr style="color:white"/>
   <div class="navigation-section">
-    <h1>How to Navigating Through Our App</h1><br>
+    <h1>How to Navigate Through The App</h1><br>
     <p class = "paras">Make an account.</p>
     <p class = "paras">Go to the search page to find new music.</p>
     <p class = "paras">Select a Genre or search a song name by keyword.</p>
